<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Vmusic</string>
    <string name="IniciarSesion">Log in</string>
    <string name="Confirmar">Are you sure about this data?</string>
    <string name="Username">"Username:                    "</string>
    <string name="Password">"Password:                       "</string>
    <string name="RegistroCompletado">Register finished succesful</string>
    <string name="Genero">Genre</string>
    <string name="Buscar">Search</string>
    <string name="Home">Home</string>
    <string name="Welcome">Welcome again!</string>
    <string name="Tendencias">Trends</string>
    <string name="Cerrar_sesion">Log out</string>
    <string name="RegistroIncompleto">You must register before enter</string>
    <string name="Beatles_cancion" translatable="false">The Beatles - Dont Let Me Down</string>
    <string name="Rolling_cancion" translatable="false">The Rolling Stones- Miss You</string>
    <string name="Queen_cancion" translatable="false">Queen - Dont Stop Me Now</string>
    <string name="Frank_Sinatra_cancion" translatable="false">Frank Sinatra - My Way</string>
    <string name="Amy_cancion" translatable="false">Amy Winehouse - Back To Black</string>
    <string name="Nina_Simone_cancion" translatable="false">Nina Simone - Feeling Good</string>
    <string name="McGraw_cancion" translatable="false">Tim McGraw - Humble And Kind</string>
    <string name="Strait_cancion" translatable="false">George Strait - Troubadour</string>
    <string name="Brooks_cancion" translatable="false">Garth Brooks - If Tomorrow Never Comes</string>
    <string name="BadBunny_cancion" translatable="false">BAD BUNNY x JHAY CORTEZ - DÁKITI</string>
    <string name="MykeTowers_cancion" translatable="false">Myke Towers - La Playa</string>
    <string name="Mora_cancion" translatable="false">Mora - TUYO</string>
    <string name="BobMarley_cancion" translatable="false">Bob Marley - Is This Love</string>
    <string name="Shaggy_cancion" translatable="false">Shaggy - Boombastic</string>
    <string name="Eminem_cancion" translatable="false">Eminem - Rap God</string>
    <string name="Tupac_cancion" translatable="false">2Pac - Dear Mama</string>
    <string name="cent_cancion" translatable="false">50 Cent - In Da Club </string>
    <string name="Mozart_cancion" translatable="false">Las Diez Mejores Obras de Mozart </string>
    <string name="Beethoven_cancion" translatable="false">Beethoven - Fur Elise </string>
    <string name="Vivaldi_cancion" translatable="false">Primavera - Antonio Vivaldi </string>
    <string name="Permiso_concedido">Permission alredy granted </string>
    <string name="Camera_permision_granted">Camera Permission Granted </string>
    <string name="Camera_permision_denied">Camera Permission Denied </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bad_credentials">Las credenciales no son correctas</string>
    <string name="error_no_user_or_pass">Error, falta usuario o contraseña</string>
    <string name="fragment_resetpass_title">Recuperar Contraseña</string>
    <string name="hint_email_reset_pass">Correo de recuperación</string>
    <string name="btn_send_mail">Enviar Correo</string>
    <string name="btn_back_login">Cancelar</string>
    <string name="fragment_register_title">Registrar Usuario</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_password2">Repetir Contraseña</string>
    <string name="btn_register">Registrar Usuario</string>
    <string name="msg_mail_sent">Email enviado</string>
    <string name="error">Error en la recuperación</string>
    <string name="error_no_email">No podemos enviar email</string>
    <string name="error_no_same_pass">Las contraseñas no son iguales</string>
    <string name="login">Iniciar Sesión</string>
    <string name="register">Registrarse</string>
    <string name="recover_password">Recuperar Contrseña</string>
    <string name="chat">Chat</string>
    <string name="character_name">Nombre personaje</string>
    <string name="search_btn">Search</string>
    <string name="message_error">Error in the message</string>
    <string name="nombre_video">Nombre artista</string>
    <string name="search">Buscar</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="chat_header">Chat</string>
    <string name="cache_header">Cache</string>
    <string name="offline_title">Switch off internet</string>
    <string name="general_header">General</string>
    <string name="vibrate_title">Vibrate on notifications</string>
    <string name="settings_menu">Settings</string>
    <string name="ChatColor">Chat color</string>

</resources>
