<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_chat"
        android:enabled="true"
        android:icon="@drawable/ic_bottom_chat"
        android:title="@string/chat">
    </item>
    <item
        android:id="@+id/item_buscar"
        android:enabled="true"
        android:icon="@drawable/ic_bottom_buscar"
        android:title="@string/Buscar">
    </item>
    <item
        android:id="@+id/item_home"
        android:enabled="true"
        android:icon="@drawable/ic_bottom_home"
        android:title="@string/Home">
    </item>
    <item
        android:id="@+id/item_tendencia"
        android:enabled="true"
        android:icon="@drawable/ic_bottom_tendencias"
        android:title="@string/Tendencias">
    </item>

</menu>